--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,145 @@
-.App {
-  text-align: center;
+@import url("https://fonts.googleapis.com/css2?family=Fira+Sans+Extra+Condensed:wght@500;600&family=Lustria&family=Hind+Guntur&display=swap");
+:root {
+  font-size: 18px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+@media (max-width: 768px) {
+  :root {
+    font-size: 12px;
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+html {
+  scroll-behavior: smooth;
+  margin: 0;
+  padding: 0;
+  width: 100vw;
+  max-width: 100vw;
+  overflow-x: hidden !important;
+  height: 100%;
+}
+
+strong {
+  font-weight: unset;
+}
+
+code {
+  color: #EF233C;
+}
+
+/* width */
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #11121B;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #1F2233;
+  border-radius: 10px;
+}
+
+a {
+  font-family: "Lustria", serif;
+  color: #F8F2F0;
+  text-decoration: underline;
+}
+
+a:hover {
+  color: #F8F2F0;
+  opacity: 0.5;
+}
+
+body {
+  position: relative;
+  min-height: 100%;
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden !important;
+  width: 100vw;
+  max-width: 100vw;
+  background-color: #1F2233;
+  color: #F8F2F0;
+}
+
+body::after {
+  content: '';
+  display: block;
+  height: 100px;
+}
+
+h1 {
+  font-family: "Fira Sans Extra Condensed", sans-serif;
+  font-weight: 600;
+  font-size: 5.5rem;
+}
+
+h2 {
+  font-family: "Fira Sans Extra Condensed", sans-serif;
+  font-weight: 600;
+  font-size: 3rem;
+}
+
+h3 {
+  font-family: "Hind Guntur", sans-serif;
+  font-weight: 400;
+  font-size: 1rem;
+}
+
+.sub-1 {
+  font-family: "Hind Guntur", sans-serif;
+  font-size: 2rem;
+  font-weight: 400;
+}
+
+.sub-2 {
+  font-family: "Hind Guntur", sans-serif;
+  font-size: 1.66rem;
+  font-weight: 400;
+}
+
+p {
+  font-family: "Lustria", serif;
+  font-size: 1.23rem;
+  font-weight: 400;
+  line-height: 150%;
+  letter-spacing: 0.02em;
+}
+
+p .small {
+  font-size: 0.8rem;
+}
+
+footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  background: #11121B;
+  padding: 26px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
 }
 
-.App-link {
-  color: #61dafb;
+footer a {
+  text-align: center;
+  text-decoration: none;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+footer a:hover {
+  color: #F8F2F0;
+  text-decoration: none;
+  opacity: 1;
 }
+
+.support {
+  font-size: 1rem;
+}
+/*# sourceMappingURL=App.css.map */
