--- a/src/App.css
+++ b/src/App.css
@@ -142,4 +142,11 @@ footer a:hover {
 .support {
   font-size: 1rem;
 }
+
+@media (min-width: 768px) {
+  body section {
+    padding-left: 180px;
+    padding-right: 180px;
+  }
+}
 /*# sourceMappingURL=App.css.map */
