--- a/src/pages/Home/styles.css
+++ b/src/pages/Home/styles.css
@@ -6,11 +6,22 @@
           box-sizing: border-box;
 }
 
+#tsparticles {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  z-index: -1;
+}
+
 #hero {
+  position: relative;
   background: -webkit-gradient(linear, left top, left bottom, from(#1D1E2B), to(#11121B));
   background: linear-gradient(180deg, #1D1E2B 0%, #11121B 100%);
   height: 100vh;
   width: 100%;
+  z-index: 0;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
