--- a/src/pages/Home/styles.scss
+++ b/src/pages/Home/styles.scss
@@ -6,10 +6,21 @@
     box-sizing: border-box;
 }
 
+#tsparticles {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    z-index: -1;
+}
+
 #hero {
+    position: relative;
     background: $bggradient;
     height: 100vh;
     width: 100%;
+    z-index: 0;
 
     display: flex;
     align-items: center;
@@ -38,6 +49,7 @@
 }
 
 #about {
+    
     padding-top: 80px;
 
 
